# HackDay

./: .gitignore  README.md  description.pptx
arduinoMock/: Arduino.h  PinMock.cpp  PinMock.h  SerialStub.cpp  SerialStub.h  String.cpp  String.h  arduino_stubs.cpp
arduinoMock/test/: ArduinoMockTests_tests.exe.stackdump  arduino_mock_tests.cpp
arxmlParser/: .gitignore  ArxmlParser.py  ComponentRenderer.py  DacuVaspApp.xml  DbcParser.py  RteRenderer.py  Se_rteData.h  SignalVisitor.py  StateEstimationCtrl.xml  StubRenderer.py  create_ports.py  create_ports_vasp.py  cunit_se_stubs.c  cunit_se_stubs.h  doittoit.sh  doittoit_vasp.sh  doittoit_vasp_handlers.sh  param_default.py  parser_test.py  patcher.py  port_test.py  todo.txt  visitor.drawio
arxmlParser/arxml/: DacuVASPApp_Simulink_VASPComponentTypes.arxml  DataTypes.arxml  DataTypes_test.arxml  Module.xml  PortInterfaces.arxml  PortInterfacesVasp.arxml  StateEstimation.arxml  StateEstimationCtrl.ldcxml  Vcm.xml
arxmlParser/can/: Backbone1J1939-T2_1.16.0-postfix.dbc  Backbone2-T2_1.16.0-postfix.dbc  CAN01-T3_1.9.0.dbc  CAN01-T3_2.3.0-postfix.dbc  CAN02-T3_1.9.0.dbc  CAN02-T3_2.3.0-postfix.dbc  CAN03-T3_1.9.0.dbc  CAN03-T3_2.3.0-postfix.dbc  CAN04-T3_1.9.0.dbc  CAN04-T3_2.3.0-postfix.dbc  CAN05-T3_1.9.0.dbc  CAN05-T3_2.3.0-postfix.dbc  CAN06-T3_1.9.0.dbc  CAN06-T3_2.3.0-postfix.dbc  CAN20-T3.dbc  CAN21-T3.dbc  CAN23-T3.dbc  CAN32-T3_1.9.0.dbc  CAN32-T3_2.3.0-postfix.dbc  CAN32-T3_2.3.0.dbc  ChassisSubnet_postfix.dbc
arxmlParser/logs/: types.txt
arxmlParser/ref/: StateEstimationCtrl.xml  cunit_se_stubs.h  cunit_stubs.c  cunit_stubs.h  rte_data.h
arxmlParser/template/: template.h
cnc_mpg_pendant/: comms.py  copy.sh  fake_encoder.py  hal.py  pendant_srv.py  serial.py  serial_mpg.py  serial_mpg2.py  test.py  test_comms.py  test_comp.py  test_eb.py  test_eh.py  test_fe.py  test_xml.py  test_xml.save
cnc_mpg_pendant/EventProxy/: buffer.cpp  buffer.h  button.cpp  button.h  encoder.cpp  encoder.h  event.cpp  event.h  event_generator.cpp  event_generator.h  event_generator.odg  event_listner.h  selector.cpp  selector.h  sender.cpp  sender.h
cnc_mpg_pendant/config/: #vcp-mpg.hal#  axis_mm.ini  copy.sh  deploy.sh  dmux4.comp  mpg.hal  mpg.xml  mpg2.hal  mpg2.hal~  test.hal  test.ini  vcp-mpg.xml
cnc_mpg_pendant/mpg_pendant/: buffer.cpp  buffer.h  button.cpp  button.h  encoder.cpp  event.h  (+12 more)
drawing_robot/: drawing_robot.ino
dro/: RPi.py  encoder.py  test_encoder.py
encoderDownSampler/: down_sampler.c  down_sampler.cpp  down_sampler.h  encoderDownSampler.ino  pulse_stretcher.cpp  pulse_stretcher.h
extruderTempCtrl/: hal_exruder_temp_ctrl.py  hal_extruder_temp_ctrl.py  test_tc.py
extruderTempCtrl/extruderTemp/src/: CMakeLists.txt  controller.cpp  controller.h  extruder.cpp  extruder.h  extruderTemp.ino
extruderTempCtrl/extruderTemp/tests/: CMakeLists.txt  all_tests.h  controller_tests.cpp  extruder_tests.cpp
luber/: hal.py  luber.drawio  luber.hal  luber.py  luber.xml  my_time.py  test_comp.py  test_ha.py  test_lc.py  test_pc.py
nano_mill/: description.pptx  gserver.py  x_from_angle.m
serialEventHdlr/: eventBroker.py  serialEventHandler.drawio  serialEventHandler.py  test_comms.py  test_comp.py  test_eb.py  test_xml.py
serialEventHdlr/3d_scanner/axis_ctrl/tests/: CMakeLists.txt
serialEventHdlr/3d_scanner/scanner/tests/: CMakeLists.txt
serialEventHdlr/EventProxy/src/: CMakeLists.txt  buffer.cpp  button.cpp  button.h  event.cpp  event.h  event_generator.cpp  event_generator.h  event_listner.h  event_parser.cpp  event_parser.h  joystick.cpp  joystick.h  lcd_writer.h  receiver.cpp  selector-schematics.drawio  selector.cpp  selector.h  selector2.cpp  selector2.h  sender.cpp
serialEventHdlr/EventProxy/tests/: CMakeLists.txt  buffer_tests.cpp  button_tests.cpp  encoder_tests.cpp  event_generator_tests.cpp  event_parser_tests.cpp  joystick_tests.cpp  lcd_writer_tests.cpp  pendantTests_tests.exe.stackdump  receiver_tests.cpp  selector2_tests.cpp  selector_tests.cpp  sender_tests.cpp
serialEventHdlr/axis_ctrl/src/: CMakeLists.txt  axis_ctrl.cpp  axis_ctrl.h
serialEventHdlr/axis_ctrl/tests/: CMakeLists.txt  axis_ctrl_tests.cpp
serialEventHdlr/lcd_writer/src/: CMakeLists.txt  lcd_writer.cpp  lcd_writer.h  model.cpp  model.h
serialEventHdlr/lcd_writer/tests/: CMakeLists.txt  lcd_writer_tests.cpp
serialEventHdlr/mpg_pendant/: CMakeLists.txt  mpg_pendant.h  mpg_pendant.ino
serialEventHdlr/mpg_pendant/config/: mpg.xml  switch_proxy.hal  test.hal
serialEventHdlr/mpg_pendant/tests/: CMakeLists.txt  mpg_tests.cpp
serialEventHdlr/mpg_pendant_lathe/tests/: CMakeLists.txt  LiquidCrystal_PCF8574.h  mpg_tests.cpp
serialEventHdlr/mpg_pendant_lathe_mk2/: CMakeLists.txt  mpg_pendant_lathe_mk2.h  mpg_pendant_lathe_mk2.ino
serialEventHdlr/mpg_pendant_lathe_mk2/config/: mpg.xml
serialEventHdlr/mpg_pendant_lathe_mk2/tests/: mpg_tests.cpp
serialEventHdlr/scanner/: CMakeLists.txt  apa.txt  mock_gui.drawio  scan.txt  scanner.h  scanner.ino  scanner.py  test_comms.py  test_eb.py  test_model.py  todo-scanner.txt
serialEventHdlr/scanner/doc/: 3D Scanning Alignment - YouTube.url  apa.txt  apa.xyz  calc_delta_t.m  calc_n.m  lidar_mock.m  lidar_mock.py  mock_gui.drawio  pcm-house1.xyz  plot_point_cloud.m  plot_point_cloud.py  scan2cloud.py  scan2img.py  scan_cloud.xyz  scanner.drawio  sigmoid_ramp.m
serialEventHdlr/scanner/src/: CMakeLists.txt  axis_ctrl.cpp  axis_ctrl.h  scanner_ctrl.cpp  scanner_ctrl.h  step_gen.cpp  step_gen.h
serialEventHdlr/scanner/steptest/: steptest.ino
serialEventHdlr/scanner/tests/: CMakeLists.txt  LIDARLite.h  Wire.h  axis_ctrl_tests.cpp  scanner_ctrl_tests.cpp  scanner_tests.cpp  step_gen_tests.cpp
serialEventHdlr/step_gen/tests/: CMakeLists.txt  step_gen_tests.cpp
spindleCtrl/: controller.cpp  controller.h  test_plot.py
spindleDriver/: simplemotion.h  simplemotion_defs.h
spindleFeedback/: fake_encoder.py  test_fe.py
spindle_feedback/: fake_encoder.py  test_fe.py
util_packages/: comms.py  hal.py  hal_save.py  input_deamon.py  serial.py  test_comms.py  test_wd.py  watchdog.py
(+117 files in other folders)
